--- a/PORTFOLIO PAGE/index.html
+++ b/PORTFOLIO PAGE/index.html
@@ -10,20 +10,16 @@
     <hr>
     <p><big><b>NAME</b></big>:MUHAMMAD ABDULLAH</p>
     <p><big><b>OCCUPATION</b></big>:STUDENT</p>
-    <p><big><b>INSTITUE</b></big>:COMSATS UNIVERSITY ISLAMABAD,LAHORE CAMPUS</p>
-    <p><big><b>REG #</b></big>:FA23-BSE-090</p>
+    <p><big><b>NATIONALITY</b></big>:PAKISTANI</p>
+    <p><big><b>DATE OF BIRTH:</b></big>15-11-2003</p>
+    <p><big><b>CITY</b></big>:SIALKOT</p>
     <hr>
-    <h2><b><u><i>QUALIFICATION</i></u></b></h2>
+    <a href="education.html">EDUCATION</a>
+    <br>
+    <a href="experience.html">EXPERIENCE</a>
+    <br>
+    <a href="projects.html">PROJECTS</a>
     <hr>
-    <p><b><big>MAJOR</big></b>:SOFTWARE ENGINEERING</p>
-    <p><b><big>SEMESTER</big></b>:2ND</p>
-    <hr>
-    <a href="https://lahore.comsats.edu.pk/default.aspx"><b>COMSATS UNIVERSITY</b></a>
     <br>
-    <img src="image.jpeg"
-    alt="COMSATS LOGO">
-    <br>
-    <br>
-  
 </body>
 </html>
