--- a/PORTFOLIO PAGE/education.html
+++ b/PORTFOLIO PAGE/education.html
@@ -6,18 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    <h2><b><u><i>EDUCATION</i></u></b></h2>
+    <span>
+    <header><h1><b><u><i>EDUCATION</i></u></b></h1></header>
     <hr>
     <p><b><big>INSTITUE</big></b>:COMSATS UNIVERSITY ISLAMABAD,LAHORE CAMPUS</p>
     <p><b><big>MAJOR</big></b>:SOFTWARE ENGINEERING</p>
     <p><b><big>REG #</big></b>:FA23-BSE-090</p>
     <p><b><big>SEMESTER</big></b>:2ND</p>
     <hr>
-    <a href="https://lahore.comsats.edu.pk/default.aspx"><b>COMSATS UNIVERSITY</b></a>
+    <a 
+    href="https://lahore.comsats.edu.pk/default.aspx">
+    <img src="image.jpeg"alt="COMSATS LOGO" height=200px
+    ><b>COMSATS LAHORE
+    </b>
+    </a>
     <br>
-    <img src="image.jpeg"
-    alt="COMSATS LOGO">
     <br>
-    <br>
+    </span>
 </body>
 </html>
