--- a/PORTFOLIO PAGE/experience.html
+++ b/PORTFOLIO PAGE/experience.html
@@ -6,18 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><b><i><u>EXPERIENCE</u></i></b></h1>
+    <div>
+    <header><h1><b><i><u>EXPERIENCE</u></i></b></h1></header>
     <hr>
-    <p><big><B>BACKGROUND:</B></big>2 YEARS AGO, I HAD NO KNOWLEDGE OF COMPUTER SCIENCE AND THE WORLD OF PROGRAMMING.
+    <p><big><B>BACKGROUND:</B></big></p>
+    <article>
+        2 YEARS AGO, I HAD NO KNOWLEDGE OF COMPUTER SCIENCE AND THE WORLD OF PROGRAMMING.
         BUT NOW, AS I DIVE DEEP INTO THE DEVELOPMENT THING, I AM BECOMING AWARE OF MANY NEW THINGS THAT I NEVER THOUGHT OF AS POSSIBLE.
         IT ALL HAPPENS WHEN ONE SHOWS CURIOSITY AND IS EAGER TO LEARN.
-        SO, KEEP LEARNING.</p>
+        SO, KEEP LEARNING.
+    </article>
     <hr>
     <p><big><b>WHAT HAVE I DONE?</b></big></p>
-    <p>AS A BEGINNER, I TRIED TO LEARN C++, BUT COULDN'T COMPLETE IT AND LEFT,AFTER COMPLETING OOP.
+    <article>
+        AS A BEGINNER, I TRIED TO LEARN C++, BUT COULDN'T COMPLETE IT AND LEFT,AFTER COMPLETING OOP.
         THEN I BEGAN LEARNING C,AND NOW I HAVE COMPLETED FUNDAMENTALS OF C.ALONG WITH C AND C++,I ALSO KNOW SOME BASICS OF PYTHON.
         NOW I AM FUNDAMENTALS OF JAVA AS IT IS A WIDELY USED LANGUAGE.AND ALSO, LAST BUT NOT LEAST, I AM ADVANCING TOWARDS WEB DEVELOPMENT.
-    </p>
+    </article>
     <hr>
+    </div>
 </body>
 </html>
