--- a/PORTFOLIO PAGE/index.html
+++ b/PORTFOLIO PAGE/index.html
@@ -6,7 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><b><i><u>INTRODUCTION</u></i></b></h1>
+    <span>
+    <header>
+        <h1><i><u>MY PORTFOLIO</u></i></h1>
+    </header>
+    <h3><b><i><u>INTRODUCTION</u></i></b></h3>
     <hr>
     <p><big><b>NAME</b></big>:MUHAMMAD ABDULLAH</p>
     <p><big><b>OCCUPATION</b></big>:STUDENT</p>
@@ -14,12 +18,23 @@
     <p><big><b>DATE OF BIRTH:</b></big>15-11-2003</p>
     <p><big><b>CITY</b></big>:SIALKOT</p>
     <hr>
-    <a href="education.html">EDUCATION</a>
-    <br>
-    <a href="experience.html">EXPERIENCE</a>
-    <br>
-    <a href="projects.html">PROJECTS</a>
+    <main>
+        <section>
+        <b>EDUCATION:</b><a href="education.html"target="_main"> Check Education</a>
+        </section>
+        <br>    
+        <section>
+        <b>EXPERIENCE:</b><a href="experience.html"target="_main"> See Experience</a>
+        </section>
+        <br>
+        <section>
+        <b>PROJECTS:</b><a href="projects.html"target="_main"> Check Projects</a>
+        </section> 
+    </main>
     <hr>
-    <br>
+    <footer>
+        <b>CONTACT ME AT:</b> simondummy123@gmail.com
+    </footer>
+    </span>
 </body>
 </html>
