--- a/FORMS/forms.html
+++ b/FORMS/forms.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <form action="/action.php">
+        <h3>REGISTRATION FORM</h3>
         <h4>STUDENT INFORMATION:</h4>
         <input type="text" placeholder="username">
         <br>
@@ -48,8 +49,20 @@
         </label>
         <br>
         <br>
+        
+        SELECT YOUR CITY:
+        <select name="city">
+            <option value="Lahore">Lahore</option>
+            <option value="Sialkot">Sialkot</option>
+            <option value="Islamabad">Islamabad</option>
+        </select>
+        <br>
+        <br>
 
         <textarea name="feedback" id="101" placeholder="please give your feedback here" rows="5"></textarea>
+        <br>
+
+        <input type="submit" value="submit">
     </form>
 </body>
 </html>
